# code-portfolio

./: README.md
schedule_tasks/: README.md
schedule_tasks/src/input/: parsers.rs
schedule_tasks/test/: example.tasks.in
sp-rust-assignment/: Cargo.toml  DESIGN_DOCUMENT.md
sp-rust-assignment/src/: main.rs  scheduler.rs  task.rs
sp-rust-assignment/tests/: cli.rs
waiter_system/: .gitignore  Cargo.toml  README.md
waiter_system/src/: datatypes.rs  lib.rs  test_waiter.rs  waiter.rs
zkp_auth_poc/: .env  .markdownlint.json  Cargo.toml  Dockerfile.zkp_client  Dockerfile.zkp_server  README.md  build.rs  docker-compose.yml  justfile
zkp_auth_poc/docs/: Assignment.md  Design.md  Protocol.md
zkp_auth_poc/infra_terraform/: .gitignore
zkp_auth_poc/infra_terraform/container_registry/: .terraform.lock.hcl  main.tf
zkp_auth_poc/infra_terraform/zkp_server_and_client/: .terraform.lock.hcl  cloud-init-client.yaml  cloud-init-server.yaml  main.tf  variables.tf
zkp_auth_poc/proto/: zkp_auth.proto
zkp_auth_poc/src/: constants.rs  utils.rs  zkp_auth.rs  zkp_client.rs  zkp_server.rs
